sessions/activity/commands/2026-03-14-122944-truncation-stats-tests-rerun/stdout.txt

=================================== ERRORS ====================================
____________________ ERROR collecting tests/test_train.py _____________________
C:\Users\Afsah\AppData\Roaming\Python\Python313\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
C:\Users\Afsah\AppData\Roaming\Python\Python313\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Program Files\Python313\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
C:\Users\Afsah\AppData\Roaming\Python\Python313\site-packages\_pytest\assertion\rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Users\Afsah\AppData\Roaming\Python\Python313\site-packages\_pytest\assertion\rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Program Files\Python313\Lib\ast.py:50: in parse
    return compile(source, filename, mode, flags,
E     File "D:\AVA\tests\test_train.py", line 73
E       assert stats["kept_examples"] == 1`r`n    assert stats["skipped_no_target_examples"] == 1
E                                         ^
E   SyntaxError: invalid syntax
=========================== short test summary info ===========================
ERROR tests/test_train.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
